--- a/public/fixed/loginWindow.html
+++ b/public/fixed/loginWindow.html
@@ -63,8 +63,7 @@
             success: function(data, textStatus, xhr) {
                 if (xhr.status === 200) {
                     $('#error-tip').removeClass('alert-danger').addClass('alert-success').text(data.message).show();
-                    // Store token in localStorage
-                    localStorage.setItem('accessToken', data.token);
+                    document.cookie = 'accessToken=' + data.token + '; path=/';
                     // Redirect to dashboard after 3 seconds
                     setTimeout(function() {
                         window.location.href = '/dashboard.html';
